Carga de imagenes, eliminación, recarga, preview area

--- a/src/components/PictureModule/EditorPicture.css
+++ b/src/components/PictureModule/EditorPicture.css
@@ -16,6 +16,9 @@
 }
 
 .picture-area-back  video{
-	width: auto;
-	height: auto;
+	width:  640px;
+	height: 480px;
+}
+.picture-area-back  canvas {
+	display: none;
 }
