--- a/src/components/PictureModule/FormPicture.css
+++ b/src/components/PictureModule/FormPicture.css
@@ -39,13 +39,13 @@
 .picture-element-disp select {
 	width: 300px;
 	height: 90%;
-	border: 1px solid gray;
+	border: 1px solid rgba(0, 0, 0, .2);
 }
 
 .picture-element-disp input {
 	width: 300px;
 	height: 90%;
-	border: 1px solid gray;
+	border: 1px solid rgba(0, 0, 0, .2);
 }
 
 .picture-form-options {
