--- a/src/components/PictureModule/ListUsers.css
+++ b/src/components/PictureModule/ListUsers.css
@@ -1,14 +1,15 @@
 .picture-list-area {
 	width: 80%;
 	height: 95%;
-	border: 1px solid green;
+	overflow: auto;
+	border: 2px solid rgba(0, 0, 0, .2);
 }
 
 .picture-list-row {
 	width: 100%;
 	height: 40px;
 	display: flex;
-	border: 1px solid gray;
+	border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
 .picture-column-img {
@@ -30,6 +31,7 @@
 	align-items: center;
 	font-weight: 500;
 	justify-content: center;
+	user-select: text;
 /*	border: 1px solid;*/
 }
 .picture-column-opts {
