--- a/src/components/PictureModule/FormPicture.css
+++ b/src/components/PictureModule/FormPicture.css
@@ -10,15 +10,21 @@
 	width: 500px;
 	height: 100%;
 	display: flex;
-	flex-direction: column;
-/*	border: 1px solid;*/
+/*	flex-direction: column;*/
 }
+
+.picture-form-elements fieldset {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+}
+
 
 .picture-form-element {
 	width: 100%;
 	display: flex;
 	flex: 1;
-/*	border: 1px solid;*/
 }
 
 .picture-element-name {
@@ -67,6 +73,12 @@
 .picture-form-options button:hover{
 	background: black;
 	color: white;
+}
+
+.picture-form-options button:disabled{
+	background: none;
+	color: gray;
+	border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .picture-element-message {
