--- a/src/components/PictureModule/ListUsers.css
+++ b/src/components/PictureModule/ListUsers.css
@@ -1,33 +1,52 @@
 .picture-list-area {
 	width: 80%;
 	height: 95%;
-	overflow: auto;
-	border: 2px solid rgba(0, 0, 0, .2);
+	overflow-y: scroll;
+	background: #495057;
+	/* border: 2px solid rgba(0, 0, 0, .2); */
+}
+
+.picture-list-area::-webkit-scrollbar {
+  width: 5px;
+}
+
+.picture-list-area::-webkit-scrollbar-track {
+  background: #f7fff7;
+}
+
+.picture-list-area::-webkit-scrollbar-thumb {
+  background: gray;
 }
 
 .picture-list-row {
 	width: 100%;
-	height: 40px;
+	height: 50px;
 	display: flex;
+	border-radius: 5px;
+	margin: 5px 0 0 0;
+	background: #e9ecef;
 	border-bottom: 1px solid rgba(0, 0, 0, .2);
 }
 
 .row-user-selected {
-	border-bottom: 2px solid gray;
+	background: #f7fff7;
 }
 
 .picture-column-img {
 	flex: 1;
 	display: flex;
 	align-items: center;
+	align-content: center;
 	justify-content: center;
-/*	border: 1px solid;*/
+	/* border: 1px solid; */
 }
 .picture-column-img img{
-	width: 30px;
-	height: 30px;
-	border: 2px solid gray;
-	border-radius: 15px;
+	width: 35px;
+	height: 35px;
+	object-fit: cover;
+  object-position: bottom;
+	image-rendering: pixelated;
+	border-radius: 18px;
 }
 .picture-column-info {
 	flex: 5;
@@ -47,17 +66,17 @@
 }
 
 .picture-column-opts button {
-	width: 20px;
-	height: 20px;
+	width: 25px;
+	height: 25px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border-radius: 10px;
-	border: 1px solid gray;
+	border-radius: 12px;
+	font-size: 1.2em;
 	color: gray;
 }
 
 .picture-column-opts button:hover {
-	color: #2b2d42;
-	border: 1px solid #2b2d42;
+	color: #a4161a;
+	border: 1px solid #a4161a;
 }
