--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -5,7 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: rgba(0, 0, 0, .2);
+  /* background: rgba(0, 0, 0, .7); */
+	background: #495057;
   z-index: 1;
 }
 
@@ -36,26 +37,24 @@
   flex-wrap: wrap;
   align-items: center;
   align-content: space-evenly;
-  /* flex-direction: column; */
   overflow: auto;
-  /* border:  1px solid; */
 }
 
 .item-modal-info {
   width: 100%;
-  height: 30px;
+  height: 35px;
   display: flex;
+  align-items: center;
   /* border: 1px solid; */
 }
 
 .info-modal-title {
   flex: 1;
   font-weight: 500;
-  /* background: red; */
-  /* border: 1px solid; */
 }
 .info-modal-desc {
   flex: 2;
+  font-size: .9em;
   /* border: 1px solid; */
 }
 
