--- a/src/components/PictureModule/FormPicture.css
+++ b/src/components/PictureModule/FormPicture.css
@@ -3,23 +3,24 @@
 	height: 150px;
 	display: flex;
 	justify-content: center;
-/*	border: 1px solid red;*/
 }
 
 .picture-form-elements {
-	width: 500px;
+	width: 640px;
 	height: 100%;
 	display: flex;
-/*	flex-direction: column;*/
+	justify-content: center;
+	background: #495057;
+	
 }
 
 .picture-form-elements fieldset {
-	width: 100%;
+	width: 90%;
 	height: 100%;
 	display: flex;
 	flex-direction: column;
+	/* border: 1px solid red; */
 }
-
 
 .picture-form-element {
 	width: 100%;
@@ -32,7 +33,8 @@
 	font-weight: 500;
 	display: flex;
 	align-items: center;
-/*	border: 1px solid;*/
+	color: #FFFF;
+	/* border: 1px solid; */
 }
 .picture-element-disp {
 	display: flex;
@@ -54,29 +56,11 @@
 	border: 1px solid rgba(0, 0, 0, .2);
 }
 
-/*.picture-element-disp input:disabled  {*/
-/*	border: 1px solid red;*/
-/*}*/
-
 .picture-form-options {
 	width: 100%;
 	display: flex;
-/*	align-items: center;*/
-/*	align-content: space-around;*/
-	justify-content: space-around;
-}
-
-.picture-form-options button{
-	width: 150px;
-	height: 35px;
-	font-weight: 500;
-	font-size: .9em;
-	border: 1px solid gray;
-}
-
-.picture-form-options button:hover{
-	background: black;
-	color: white;
+	justify-content: space-between;
+	/* border: 1px solid */
 }
 
 .picture-form-options button:disabled{
@@ -84,6 +68,16 @@
 	color: gray;
 	border: 1px solid rgba(0, 0, 0, 0.1);
 }
+
+.picture-element-disp input:disabled {
+	color: #adb5bd;
+	user-select: none;
+}
+
+.picture-element-disp select:disabled {
+	color: #adb5bd;
+}
+
 
 .picture-element-message {
 	flex: 1;
@@ -93,5 +87,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	color: #FFFF;
 /*	border: 1px solid red;*/
 }
