--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,12 @@
   display: flex;
   flex-direction: column;
   user-select: none;
+	background: #343a40;
 }
 
 .app-bar {
   width: 100%;
   height: 30px;
-/*  border: 2px solid;*/
   background: #edf2f4;
 }
 .app-content {
