--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,14 @@
 @tailwind utilities;
 
 /* For AppBar */
-
-.app {
+#root {
   width: 100vw;
   height: 100vh;
+}
+
+.app {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   user-select: none;
