Presentación de usuarios sin, tener dispositivo conectado, actualización de estilos

--- a/src/components/PictureModule/EditorPicture.css
+++ b/src/components/PictureModule/EditorPicture.css
@@ -19,6 +19,7 @@
 .picture-area-back  video{
 	width:  640px;
 	height: 480px;
+	background: #495057;
 }
 .picture-area-back  canvas {
 	display: none;
