--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -5,9 +5,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* background: rgba(0, 0, 0, .7); */
+  background: rgba(0, 0, 0, .7);
 	/* background: #495057; */
-	background: #343a40;
   z-index: 1;
 }
 
